<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Main Screen -->
    <string name="app_name">Molecule Flashcards</string>
    <string name="error_title">Error!</string>
    <string name="empty"></string>
    <string name="header_text">Welcome to ExSciTecH!</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="play_button">Play</string>
    <string name="tutorial_button">Tutorial</string>
    <string name="credits_button">Credits</string>
    <string name="warning">Warning!</string>
    <string name="confirm_no_score">Your scores will not be saved unless you register. Play anyway?</string>
    <string name="confirm_logout">, are you sure you want to log out?</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_message">
        Thanks for downloading our app! Remember to log in or register by clicking the icon
        in the upper right-hand corner of the screen. If you would like to add your own question
        sets, just register, then visit the ExSciTecH website and use our question set editor.
        Have fun!
    </string>
    
    <!-- Dialogs -->
    <string name="confirm_positive">Yes</string>
    <string name="confirm_negative">No</string>
    <string name="alert_ok">OK</string>
    
    <!-- Login Screen -->
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="login_message">Logging in...</string>
    <string name="login_header_text">Sign in to ExSciTecH</string>
    
    <!-- Register Screen -->
    <string name="username_hint">Username</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register_message">Sending Registration...</string>
    <string name="register_header_text">Register now to save high scores!</string>
    <string name="password_error">Password\'s do not match!</string>
    
    <!-- Selection Screens -->
    <string name="image_accessibility_desc">Image of Selection</string>
    <string name="category_header">Select a Category</string>
    <string name="selection_header">Select a Game</string>
    
    <!-- Description Screens -->
    <string name="time_limit_label">Time Limit:</string>
    <string name="num_q_label">Questions:</string>
    <string name="description_label">Description:</string>
    <string name="high_scores_button">High Scores</string>
    
    <!-- High Score Screen -->
    <string name="high_scores_header">High Scores</string>
    
    <!-- Game Screen -->
    <string name="error_gl">Error: Could not create openGL 2.0 context!</string>
    <string name="back">Back</string>
    
    <!-- Credits Screen -->
    <string name="credits_header">This app was developed as part of</string>
    <string name="credits_nsf">NSF IIS #0968350</string>
    <string name="credits_body">
        <![CDATA[
            <b>Primary Developers:</b><br/>
                - <a href="http://connormahaffey.com/">Connor Mahaffey</a><br/>
                - <a href="https://github.com/GameGeazer">Will Gervasio</a><br/>
            <b>Primary Contributors:</b><br/>
                - <a href="http://samschlachter.com">Sam Schlachter</a><br/>
            <b>Project Leads:</b><br/>
                - <a href="http://cs.millersville.edu/fs/gzoppetti/">Gary Zoppetti</a><br/>
                - <a href="http://gcl.cis.udel.edu/personal/taufer/index.php">Michela Taufer</a><br/><br/>
            <i>This project was made possible through the support of the
               National Science Foundation.</i>
        ]]>
    </string>
    
    <!-- Tutorial Screen -->
    <string name="tutorial_step_1">1. Click Play then select a Category and finally a Game to play.</string>
    <string name="tutorial_step_2">2. Once you are sure of your decision, hit Play.</string>
    <string name="tutorial_step_3">
        Important: Once you\'ve started a game, exiting an app will restart your game and cause you to
        lose progress.
    </string>
    <string name="tutorial_step_4">
        3. Read and answer the question or identify the molecule shown.
           You can rotate the molecule with your finger, as well as use pinch-to-zoom.
    </string>
    <string name="tutorial_step_5">Correct answers gain you points, incorrect answers cost you points.</string>
    <string name="tutorial_step_6">
        Finish before the timer runs out. Finishing faster will gain you extra points and
        an opportunity to get within the top 10!
    </string>
    <string name="tutorial_step_7">Have fun!</string>
</resources>
