<?xml version="1.0" encoding="utf-8"?> 
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical" >
       
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
   
	    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            android:text="@string/tutorial_step_1"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:textColor="#000000" />
	    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            android:text="@string/tutorial_step_2"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:textColor="#000000" />
	    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="-5dp"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tutorial_step_3"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:textColor="#000000" />
	    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            android:text="@string/tutorial_step_4"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:textColor="#000000" />
	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="400dp"
	        android:contentDescription="@string/empty"
	        android:scaleType="centerInside"
	        android:src="@drawable/tutorial_screenshot" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            android:text="@string/tutorial_step_5"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:textColor="#000000" />
	    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            android:text="@string/tutorial_step_6"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:textColor="#000000" />
	    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/tutorial_step_7"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="#000000" />
    </LinearLayout>
</ScrollView>