<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" 
	android:gravity="center">
	
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    
        <ImageView android:id="@+id/header_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty"
            android:scaleType="centerCrop"
            android:src="@drawable/header" />
    
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="30dp"
            android:layout_alignBottom="@id/header_image"
            android:text="@string/login_header_text"
            android:textSize="32sp"
            android:textColor="#ffffff" />
    
    </RelativeLayout>
	
	<EditText
		android:id="@+id/email"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:layout_marginBottom="30dp"
		android:hint="@string/email_hint"
		android:inputType="textEmailAddress" />
	
	<EditText
		android:id="@+id/password"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="30dp"
		android:hint="@string/password_hint"
		android:inputType="textPassword" />
	
	 <Button
		 android:layout_width="fill_parent"
		 android:layout_height="60dp"
		 android:layout_marginLeft="45dp"
		 android:layout_marginRight="45dp"
		 android:layout_marginBottom="20dp"
		 android:textSize="30sp"
		 android:text="@string/login"
		 android:textColor="#ffffffff"
         android:background="@drawable/button_green"
		 android:onClick="onLoginButton" />
	 
	 <Button
         android:layout_width="fill_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
         android:layout_marginBottom="20dp"
         android:textSize="30sp"
         android:text="@string/register"
         android:textColor="#ffffffff"
         android:background="@drawable/button_blue"
         android:onClick="onRegisterButton" />
	 
</LinearLayout>
