<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center">
    
    <EditText
	    android:id="@+id/email"
	    android:layout_width="300dp"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="30dp"
	    android:hint="@string/email_hint"
	    android:inputType="textEmailAddress" />
    
    <EditText
	    android:id="@+id/password"
	    android:layout_width="300dp"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="30dp"
	    android:hint="@string/password_hint"
	    android:inputType="textPassword" />
    
     <Button
         android:layout_width="200dp"
	     android:layout_height="80dp"
	     android:textSize="40sp"
	     android:text="@string/login"
	     android:onClick="onLoginButton" />
     
</LinearLayout>