<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:fadeScrollbars="false">        
	    <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:gravity="left" >
		    
	        <TextView android:id="@+id/time_limit"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/time_limit_label"
		        android:textSize="20sp"
		        android:textStyle="bold"
		        android:paddingTop="20dp"
		        android:paddingLeft="20dp" />
	        
	        <TextView android:id="@+id/number_of_questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_q_label"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="20dp" />
	    
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/description_label"
		        android:textSize="20sp"
		        android:textStyle="bold"
		        android:paddingLeft="20dp" />
		    
		    <TextView android:id="@+id/game_description"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="16sp" 
		        android:padding="20dp" />
		    
	    </LinearLayout>
	</ScrollView>
    
    <Button
        android:layout_height="80dp"
		android:layout_width="250dp"
		android:layout_marginTop="30dp"
		android:layout_marginBottom="30dp"
		android:textSize="40sp"
		android:text="@string/start_button"
		android:onClick="onStartButton" />
    
    <Button
        android:layout_height="80dp"
        android:layout_width="250dp"
        android:layout_marginBottom="30dp"
        android:textSize="34sp"
        android:text="@string/high_scores_button"
        android:onClick="onHighScoresButton" />

</LinearLayout>
